feat: Add modern landing page with transparent navigation
- Add transparent, blurred navigation bar
- Implement shadcn navigation menu
- Create hero section
- Update documentation structure

--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@radix-ui/react-form": "^0.1.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.1.2",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@upstash/ratelimit": "^1.0.1",
     "@upstash/redis": "^1.28.3",
